# invisible-hand

./: .gitignore  404.html  LICENSE  Makefile  Pipfile  README.md  chrome-ghclassroom-waiter.crx  format.sh  github_ta_subscribe_hw.py  index.html  mkdocs.yml  onboarding.sh  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: -docs-.md  feature_request.md
.github/workflows/: docs.yml
chrome-ghclassroom-waiter/: execute.js  manifest.json  popup.html
config/: settings.toml
dev/: index.html
docs/: dev.md  index.md
hand/: _cli.py  config.py  ensures.py  exchange.py
hand/api/: git.py  github.py
hand/cli/: check.py  cmd_config.py  main.py  main_test.py  opt.py  opts.py
hand/cli/cmd/: __init__.py  add.py  check.py  crawl.py  grant.py  patch.py  publish.py  times.py
hand/config/: cmd.py
hand/core/: console_color.py
hand/old_config/: __init__.py  base_config.py  export_toml.py  words.py
hand/old_scripts/: dev.py  event_times.py  grant_read_access.py  patch_project.py
hand/old_scripts/shared_options/: __init__.py
hand/scripts/: __init__.py  _protocol.py  add.py  add_students.py  announce_grade.py  crawl_classroom.py  grant_read_access.py  patch.py  patch_project.py  publish.py  times.py
hand/utils/: github_entities.py  github_scanner.py  google_student.py
invisible_hand/: __init__.py  __main__.py  cli.py  ensures.py  errors.py  shared_options.py  urls.py
invisible_hand/cfg/: __init__.py  base_config.py  cmd.py  config_manager.py  default.py  export_toml.py  test_base_config.py  test_default.py  test_export_toml.py  words.py
invisible_hand/config/: __init__.py  base_config.py  cmd.py  config_manager.py  config_util.py  context.py  export_toml.py  github.py  gsheet.py
invisible_hand/config/templates/: github.ini  google_sheet.ini
invisible_hand/core/: console_color.py
invisible_hand/core/color_text/: __init__.py  colored.py  style.py
invisible_hand/scripts/: __init__.py  add_students.py  announce_grade.py  crawl_classroom.py  dev.py  event_times.py  github_announce_grade.py  github_crawl_classroom.py  github_event_times.py  github_grant_team_access.py  github_patch_project.py  github_subscribe_hw.py  grant_read_access.py  patch_project.py
invisible_hand/utils/: __init__.py  github_api.py  github_entities.py  github_scanner.py  google_student.py
playground/: play.py
scripts/: format.py
search/: search_index.json
tests/: _test_google_student.py  conftest.py  script_add_test.py  script_times_test.py  test_base_config.py  test_export_toml.py  test_google_student.py
tests/cli/: check_test.py  times_test.py
