[tool.poetry]
authors = ["Ian Chen <ianre657@gmail.com>"]
description = "Automate your workflow with github classroom"
exclude = ["tests"]
name = "invisible-hand"
readme = "README.md"
version = "0.2.3"

packages = [
  {include = "invisible_hand"},
]

[tool.poetry.scripts]
hand = "invisible_hand.cli:main"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.9.1"
click = "^7.1.2"
colorama = "^0.4.3"
gitpython = "^3.1.7"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
halo = "^0.0.30"
httpx = "^0.14.1"
ipython = "^7.17.0"
iso8601 = "^0.1.12"
lxml = "^4.5.2"
oauth2client = "^4.1.3"
pandas = "^1.1.1"
prompt-toolkit = "^3.0.6"
pygsheets = "^2.0.3"
python = "^3.6"
requests = "^2.24.0"
selenium = "^3.141.0"
tabulate = "^0.8.7"
tqdm = "^4.48.2"
trio = "^0.16.0"
xlsxwriter = "^1.3.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 90

exclude = '''
/(
    \.eggs
  | \.git
)
'''

[tool.isort]
no_lines_before = "LOCALFOLDER"
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
