[tool.poetry]
authors = ["Ian Chen"]
description = "Automate your workflow with github classroom"
exclude = ["tests"]
name = "invisible-hand"
readme = "README.md"
version = "0.3.2"

classifiers = [
  "Private :: Do not Upload",
]

packages = [
  {include = "hand"},
]

[tool.poetry.scripts]
hand = "hand.cli.main:app"

[tool.poetry.dependencies]
attrs = "^21.2.0"
beautifulsoup4 = "^4.9.1"
click = "^7.1.2"
colorama = "^0.4.3"
dynaconf = "^3.1.7"
gitpython = "^3.1.7"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
halo = "^0.0.30"
httpx = "^0.14.1"
humanize = "^3.13.1"
iso8601 = "^0.1.12"
lxml = "^4.5.2"
oauth2client = "^4.1.3"
prompt-toolkit = "^3.0.6"
pydantic = "^1.9"
pygsheets = "^2.0.3"
python = "^3.7"
requests = "^2.24.0"
rich = "^9.2.0"
selenium = "^3.141.0"
tomlkit = "^0.7.0"
tqdm = "^4.48.2"
trio = "^0.16.0"
trio-typing = "^0.5.1"
typer = {extras = ["all"], version = "^0.3.2"}
xlsxwriter = "^1.3.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^19.10b0"
isort = "^5.6.4"
mkdocs-material = "^7.3.5"
mypy = "^0.910"
poethepoet = "^0.12.3"
pyflakes = "^2.2.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poe.tasks]
format = "black ."
import_remove = "autoflake --remove-all-unused-imports --recursive --remove-unused-variables --in-place --exclude=__init__.py hand tests"
import_sort = "isort hand tests"
lint = "pyflakes tests hand"
test = "pytest tests -s -v"
test_cov = "pytest --cov=hand tests"

better = ["import_remove", "import_sort", "format", "lint"]

[tool.pytest.ini_options]
addopts = [
  "-m not api",
]
markers = [
  "api: send actual api requests",
]

[tool.black]
line-length = 88

exclude = '''
/(
    \.eggs
  | \.git
)
'''

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
